UNLV_driving_simulator_motion_system_G/support_miraiintertech/ISaGRAF/TARGET/USER/TbusSIO.h

	#define	TBUSSIOAPI	__declspec(dllexport)
	#define TBUSSIOAPI	__declspec(dllimport)
typedef struct {
	int		address[32];
	long	data[32];
} COMPACK;
TBUSSIOAPI int WINAPI init_sio_tbus(
	LPCTSTR port,  // Port Name ( "COM1","COM2"etc. )
	int baud,      // BaudRate ( 4,5,6,11H,13H,14H )
	int nrt,       // Retry
	int *axes_info //
	);
TBUSSIOAPI int WINAPI init_sio( void );
TBUSSIOAPI int WINAPI get_axes( unsigned short *axes );
TBUSSIOAPI int WINAPI get_sio_error( void );
TBUSSIOAPI int WINAPI read_svmem( int axis, int address, long *dst );
TBUSSIOAPI int WINAPI write_param( int axis, const COMPACK *src );
 TBUSSIOAPI int WINAPI read_param( int axis, COMPACK *dst );
TBUSSIOAPI int WINAPI write_point( int axis, int point, const COMPACK *src );
TBUSSIOAPI int WINAPI read_point( int axis, int point, COMPACK *dst );
TBUSSIOAPI int WINAPI load_param( int axis );
TBUSSIOAPI int WINAPI save_param( int axis );
TBUSSIOAPI int WINAPI save_point( int axis, int point );
TBUSSIOAPI int WINAPI get_write_count( int axis );
TBUSSIOAPI int WINAPI write_fzone( int axis, long zone );
TBUSSIOAPI int WINAPI write_rzone( int axis, long zone );
TBUSSIOAPI int WINAPI select_svparm( int axis, int gain_sel, int svparm );
TBUSSIOAPI int WINAPI write_inpos( int axis, long width );
TBUSSIOAPI int WINAPI write_trqlim( int axis, int l_dynamic, int l_static );
TBUSSIOAPI int WINAPI write_velocity( int axis, int vcmd, int acmd );
TBUSSIOAPI int WINAPI move_point( int axis, int point );
TBUSSIOAPI int WINAPI move_abs( int axis, long position );
TBUSSIOAPI int WINAPI follow_position( int axis );
TBUSSIOAPI int WINAPI move_jog( int axis, long distance );
TBUSSIOAPI int WINAPI move_inc( int axis, long distance );
TBUSSIOAPI int WINAPI move_org( int axis, int mode );
TBUSSIOAPI int WINAPI move_rotate( int axis, int dir, int vcmd, int acmd );
TBUSSIOAPI int WINAPI write_position( int axis, long position );
TBUSSIOAPI int WINAPI set_son( int axis );
TBUSSIOAPI int WINAPI set_soff( int axis );
TBUSSIOAPI int WINAPI reset_alarm( int axis );
TBUSSIOAPI int WINAPI reset_memory( int axis );
TBUSSIOAPI int WINAPI config_pio( int axis, int mode );
TBUSSIOAPI int WINAPI get_status( int axis, char *param );
TBUSSIOAPI int WINAPI check_run( int axis );
TBUSSIOAPI int WINAPI check_son( int axis );
TBUSSIOAPI int WINAPI check_org( int axis );
TBUSSIOAPI int WINAPI check_pfin( int axis );
TBUSSIOAPI int WINAPI check_alrm( int axis );
TBUSSIOAPI int WINAPI check_status( int axis );
TBUSSIOAPI int WINAPI reset_stwrf( int axis );
TBUSSIOAPI int WINAPI check_stwrf( int axis );