UNLV_driving_simulator_motion_system_G/support_miraiintertech/Dyadic_TBSmp_Move/TBSmp_Move/VB/Tbussio.bas

Attribute VB_Name = "Tbussio"
'//------------------------------------------------------------------------
'//
'//      Termi-BUS SIO Serial Communication Library
'//
'//          DLL.Name: TMBSCOM.DLL
'//
'//      Termi-BUS SIO API Declaration for Visual Basic
'//
'//          FileName: TBUSSIO.BAS
'//
'//      Copyright(C) 1999,2003 Dyadic Systems Co.,Ltd.
'//
'//      Ver.4.10  14th/Apr./2004      By M.Tsurumi
'//
'//------------------------------------------------------------------------
Option Explicit

'//----------------------------------------------------------------
'//        メモリブロック転送コマンドのパラメータデータ型
'//----------------------------------------------------------------
Type COMPACK
    address(31) As Long      'オフセット値の配列( -1は処理をスキップ )
    data(31) As Long         'データの配列
End Type

'//----------------------------------------------------------------
'//                 軸構成指定情報伝達配列の定義
'//----------------------------------------------------------------
Public axes_info(16) As Long

'//--------------------------------------------------------------------
'//  旧バージョン互換アプリケーションプログラムインターフェイス関数
'//--------------------------------------------------------------------

'//----------------------------------------------------------------
'//                         通信起動ＡＰＩ
'//----------------------------------------------------------------

'// Termi-BUS SIO の通信起動関数 ( 通信条件直接指定 )
'TBUSSIOAPI int WINAPI init_sio_tbus(
'    LPCTSTR port,  // 通信ポートファイル名 ( "COM1","COM2"etc. )
'    int baud,      // ボーレイト指定コード ( 4,5,6,11H,13H,14H )
'    int nrt,       // コマンド再送最大回数
'    int *axes_info // 軸構成指定情報
'    );

Public Declare Function init_sio_tbus Lib "TMBSCOM.DLL" Alias "_init_sio_tbus@16" _
    (ByVal port As String, _
    ByVal baud As Long, _
    ByVal nrt As Long, _
    axes_info As Long) As Long

'// Termi-BUS SIO の通信起動関数 ( TBUSSIO.INIファイル指定 )
'TBUSSIOAPI int WINAPI init_sio( void );

Public Declare Function init_sio Lib "TMBSCOM.DLL" Alias "_init_sio@0" () As Long

'//----------------------------------------------------------------
'//                    通信動作状態確認ＡＰＩ
'//----------------------------------------------------------------

'// 現在の軸構成情報を得る関数
'TBUSSIOAPI int WINAPI get_axes(
'    unsigned short *axes    // 軸構成情報格納領域へのポインタ
'    );
Public Declare Function get_axes Lib "TMBSCOM.DLL" Alias "_get_axes@4" _
    (axes As Integer) As Long

'// 現在の通信エラーコードを得る関数
Public Declare Function get_sio_error Lib "TMBSCOM.DLL" Alias "_get_sio_error@0" () As Long

'//----------------------------------------------------------------
'//                   仮想メモリアクセスＡＰＩ
'//----------------------------------------------------------------
'// (R4) 仮想メモリ空間からのランダムアクセス読み出し関数
Public Declare Function read_svmem Lib "TMBSCOM.DLL" Alias "_read_svmem@12" _
    (ByVal axis As Long, _
    ByVal address As Long, _
    dst As Long) As Long

'// EEPROM 共通パラメータ一括書き込み( src -> EEPROM )関数
Public Declare Function write_param Lib "TMBSCOM.DLL" Alias "_write_param@8" _
    (ByVal axis As Long, _
    src As COMPACK) As Long

'// EEPROM 共通パラメータ読み出し( EEPROM -> dst )関数
Public Declare Function read_param Lib "TMBSCOM.DLL" Alias "_read_param@8" _
    (ByVal axis As Long, _
    dst As COMPACK) As Long

'// EEPROM ポイントデータ一括書き込み( src -> EEPROM )関数
Public Declare Function write_point Lib "TMBSCOM.DLL" Alias "_write_point@12" _
    (ByVal axis As Long, _
    ByVal Point As Long, _
    src As COMPACK) As Long

'// EEPROM ポイントデータ読み出し( EEPROM -> dst )関数
Public Declare Function read_point Lib "TMBSCOM.DLL" Alias "_read_point@12" _
    (ByVal axis As Long, _
    ByVal Point As Long, _
    dst As COMPACK) As Long

'// 実行領域共通パラメータロード( EEPROM -> Bank#30 )関数
Public Declare Function load_param Lib "TMBSCOM.DLL" Alias "_load_param@4" _
    (ByVal axis As Long) As Long

'// 実行領域共通パラメータセーブ( Bank#30 -> EEPROM )関数
Public Declare Function save_param Lib "TMBSCOM.DLL" Alias "_save_param@4" _
    (ByVal axis As Long) As Long

'// 実行領域ポイントデータセーブ( Bank#31 -> EEPROM )関数
Public Declare Function save_point Lib "TMBSCOM.DLL" Alias "_save_point@8" _
    (ByVal axis As Long, _
    ByVal Point As Long) As Long

'// 共通パラメータ領域(Bank#0)の書き込み回数読み出し関数
Public Declare Function get_write_count Lib "TMBSCOM.DLL" Alias "_get_write_count@4" _
    (ByVal axis As Long) As Long


'//----------------------------------------------------------------
'//                    軸動作パラメータ変更ＡＰＩ
'//----------------------------------------------------------------

'// (z) 正転側ＺＯＮＥ出力境界値を変更する関数
'   axis：軸番号
'   zone：正転側ゾーン境界値
Public Declare Function write_fzone Lib "TMBSCOM.DLL" Alias "_write_fzone@8" _
    (ByVal axis As Long, _
    ByVal zone As Long) As Long

'// (z) 逆転側ＺＯＮＥ出力境界値を変更する関数
'   axis：軸番号
'   zone：逆転側ゾーン境界値
Public Declare Function write_rzone Lib "TMBSCOM.DLL" Alias "_write_rzone@8" _
    (ByVal axis As Long, _
    ByVal zone As Long) As Long

'// (g) 移動時又は停止時のサーボゲインパラメータを変更する関数
'   axis    ：軸番号
'   gain_sel：停止時移動時の選択 0=移動時, 1=停止時
'   svparm  ：サーボゲインパラメータ
Public Declare Function select_svparm Lib "TMBSCOM.DLL" Alias "_select_svparm@12" _
    (ByVal axis As Long, _
    ByVal gain_sel As Long, _
    ByVal sv_parm As Long) As Long

'// (i) 位置決め完了検出幅を変更する関数
'   axis ：軸番号
'   width：位置決め完了検出幅
Public Declare Function write_inpos Lib "TMBSCOM.DLL" Alias "_write_inpos@8" _
    (ByVal axis As Long, _
    ByVal width As Long) As Long

'// (l) 停止時及び移動時の電流制限値を変更する関数
'   axis     ：軸番号
'   l_dynamic：停止時電流制限値
'   l_static ：移動時電流制限値
Public Declare Function write_trqlim Lib "TMBSCOM.DLL" Alias "_write_trqlim@12" _
    (ByVal axis As Long, _
    ByVal l_dynamic As Long, _
    ByVal l_static As Long) As Long

'// (v) 速度／加速度指令値設定関数
'   axis：軸番号
'   vcmd：速度指令値
'   acmd：加速度指令値
Public Declare Function write_velocity Lib "TMBSCOM.DLL" Alias "_write_velocity@12" _
    (ByVal axis As Long, _
    ByVal vcmd As Long, _
    ByVal acmd As Long) As Long


'//------------------------------------------------------------------
'//                        軸動作指令ＡＰＩ
'//------------------------------------------------------------------

'// (Q3) ポイント番号指定ＰＴＰ動作指令関数
'   axis ：軸番号
'   point：ポイント番号
Public Declare Function move_point Lib "TMBSCOM.DLL" Alias "_move_point@8" _
    (ByVal axis As Long, _
    ByVal Point As Long) As Long

'// (a) 絶対位置指定ＰＴＰ動作指令関数
'TBUSSIOAPI int WINAPI move_abs(
'    int axis,      // 軸番号
'    long position  // 絶対座標系での目標位置
'    );

Public Declare Function move_abs Lib "TMBSCOM.DLL" Alias "_move_abs@8" _
    (ByVal axis As Long, _
    ByVal position As Long) As Long

'// (d) 残移動指令キャンセル（即時停止）指令関数
'TBUSSIOAPI int WINAPI follow_position(
'    int axis      // 軸番号
'    );

Public Declare Function follow_position Lib "TMBSCOM.DLL" Alias "_follow_position@4" _
    (ByVal axis As Long) As Long

'// (j) ＪＯＧ動作指令関数
'TBUSSIOAPI int WINAPI move_jog(
'    int axis,      // 軸番号
'    long distance  // ＪＯＧ指令繰り返し周期当たりの移動量
'    );

Public Declare Function move_jog Lib "TMBSCOM.DLL" Alias "_move_jog@8" _
    (ByVal axis As Long, _
    ByVal distance As Long) As Long

'// (m) 相対移動量位置指定ＰＴＰ動作指令関数
'TBUSSIOAPI int WINAPI move_inc(
'    int axis,      // 軸番号
'    long distance  // 移動量
'    );

Public Declare Function move_inc Lib "TMBSCOM.DLL" Alias "_move_inc@8" _
    (ByVal axis As Long, _
    ByVal distance As Long) As Long

'// (o) 原点復帰動作指令関数
'TBUSSIOAPI int WINAPI move_org(
'    int axis,      // 軸番号
'    int mode       // 原点復帰動作パターン指定コード
'    );

Public Declare Function move_org Lib "TMBSCOM.DLL" Alias "_move_org@8" _
    (ByVal axis As Long, _
    ByVal mode As Long) As Long

'// (v) 無限回転指令関数
'TBUSSIOAPI int WINAPI move_rotate(
'    int axis,      // 軸番号
'    int dir,       // 回転方向 0=正転, 1=逆転
'    int vcmd,      // 速度指令値
'    int acmd       // 加速度指令値
'    );

Public Declare Function move_rotate Lib "TMBSCOM.DLL" Alias "_move_rotate@16" _
    (ByVal axis As Long, _
    ByVal dir As Long, _
    ByVal vcmd As Long, _
    ByVal acmd As Long) As Long


'//----------------------------------------------------------------
'//                 サーボシステム状態変更ＡＰＩ
'//----------------------------------------------------------------

'// (b) 現在位置変更（座標系シフト）指令関数
'TBUSSIOAPI int WINAPI write_position(
'    int axis,      // 軸番号
'    long position  // 絶対座標系での現在位置
'    );

Public Declare Function write_position Lib "TMBSCOM.DLL" Alias "_write_position@8" _
    (ByVal axis As Long, _
    ByVal position As Long) As Long

'// (q) サーボＯＮ指令関数
'TBUSSIOAPI int WINAPI set_son(
'    int axis      // 軸番号
'    );

Public Declare Function set_son Lib "TMBSCOM.DLL" Alias "_set_son@4" _
    (ByVal axis As Long) As Long

'// (q) サーボＯＦＦ指令関数
'TBUSSIOAPI int WINAPI set_soff(
'    int axis      // 軸番号
'    );

Public Declare Function set_soff Lib "TMBSCOM.DLL" Alias "_set_soff@4" _
    (ByVal axis As Long) As Long

'// (r) アラームリセット指令関数
'TBUSSIOAPI int WINAPI reset_alarm(
'    int axis      // 軸番号
'    );

Public Declare Function reset_alarm Lib "TMBSCOM.DLL" Alias "_reset_alarm@4" _
    (ByVal axis As Long) As Long

'// (r) 不揮発性メモリ初期化指令関数
'TBUSSIOAPI int WINAPI reset_memory(
'    int axis      // 軸番号
'    );

Public Declare Function reset_memory Lib "TMBSCOM.DLL" Alias "_reset_memory@4" _
    (ByVal axis As Long) As Long

'// (s) ＰＩＯ機能選択フラグ設定関数
'TBUSSIOAPI int WINAPI config_pio(
'    int axis,      // 軸番号
'    int mode       // ＰＩＯ機能選択フラグ
'    );

Public Declare Function config_pio Lib "TMBSCOM.DLL" Alias "_config_pio@8" _
    (ByVal axis As Long, _
    ByVal mode As Long) As Long


'//----------------------------------------------------------------
'//               サーボシステム内部状態確認ＡＰＩ
'//----------------------------------------------------------------

'//  サーボシステム内部状態を得る関数
'TBUSSIOAPI int WINAPI get_status(
'    int axis,      // 軸番号
'    char *param    // サーボシステム内部状態データ格納領域へのポインタ
'    );

Public Declare Function get_status Lib "TMBSCOM.DLL" Alias "_get_status@8" _
    (ByVal axis As Long, _
    param As Byte) As Long

'// サーボシステム RUN 状態 (RUNビット) を得る関数
'TBUSSIOAPI int WINAPI check_run(
'    int axis      // 軸番号
'    );

Public Declare Function check_run Lib "TMBSCOM.DLL" Alias "_check_run@4" _
    (ByVal axis As Long) As Long

'// サーボ ON/OFF 状態 (SONビット) を得る関数
'TBUSSIOAPI int WINAPI check_son(
'    int axis      // 軸番号
'    );

Public Declare Function check_son Lib "TMBSCOM.DLL" Alias "_check_son@4" _
    (ByVal axis As Long) As Long

'// 原点復帰完了状態 (ZFINビット) を得る関数
'TBUSSIOAPI int WINAPI check_org(
'    int axis      // 軸番号
'    );

Public Declare Function check_org Lib "TMBSCOM.DLL" Alias "_check_org@4" _
    (ByVal axis As Long) As Long

'// 位置決め完了状態 (PFINビット) を得る関数
'TBUSSIOAPI int WINAPI check_pfin(
'    int axis      // 軸番号
'    );

Public Declare Function check_pfin Lib "TMBSCOM.DLL" Alias "_check_pfin@4" _
    (ByVal axis As Long) As Long

'// アラーム状態 (ALMビット) を得る関数
'TBUSSIOAPI int WINAPI check_alrm(
'    int axis      // 軸番号
'    );

Public Declare Function check_alarm Lib "TMBSCOM.DLL" Alias "_check_alrm@4" _
    (ByVal axis As Long) As Long

'// (n) サーボシステム内部状態ポーリング関数
'TBUSSIOAPI int WINAPI check_status(
'    int axis      // 軸番号
'    );

Public Declare Function check_status Lib "TMBSCOM.DLL" Alias "_check_status@4" _
    (ByVal axis As Long) As Long

'// ダイレクトレスポンスデータ書き込みフラグをクリアする関数
'TBUSSIOAPI int WINAPI reset_stwrf(
'    int axis      // 軸番号
'    );

Public Declare Function reset_stwrf Lib "TMBSCOM.DLL" Alias "_reset_stwrf@4" _
    (ByVal axis As Long) As Long

'// ダイレクトレスポンスデータ書き込みフラグを調べる関数
'TBUSSIOAPI int WINAPI check_stwrf(
'    int axis      // 軸番号
'    );

Public Declare Function check_stwrf Lib "TMBSCOM.DLL" Alias "_check_stwrf@4" _
    (ByVal axis As Long) As Long


'//----------------------------------------------------------------------
'//       新規追加アプリケーションプログラムインターフェイス関数
'//----------------------------------------------------------------------

'//----------------------------------------------------------------
'//                         通信起動ＡＰＩ
'//----------------------------------------------------------------
